--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
-main {
-	margin: 16px;
+#root > main {
+	padding: 16px;
 }
 
-header {
+.bg {
 	backdrop-filter: blur(12px);
 	background-color: #ffffff80;
-	padding: 16px 18px;
+	padding: 16px;
 	border-radius: 12px;
 	-webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+header {
 	display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,11 +22,22 @@ header > div {
     flex-direction: column;
 }
 
-#group {
+#t {
 	opacity: 60%;
 	font-size: 10pt;
 }
 
-#date {
+#h {
 	font-size: 16pt;
+}
+
+
+#class-item {
+	margin-top: 16px;
+}
+
+#class-item > main {
+	margin-top: 8px;
+	display: flex;
+	justify-content: space-between;
 }
