--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.1;
   font-weight: 400;
   color: black;
+  margin: 0;
 }
 
 body {
