--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-#root > main {
-	padding: 16px;
-}
-
 .bg {
 	backdrop-filter: blur(12px);
-	background-color: #ffffff80;
+	background-color: #ffffffa2;
 	padding: 16px;
 	border-radius: 12px;
 	-webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -13,31 +9,49 @@
 
 header {
 	display: flex;
-    align-items: center;
-    justify-content: space-between;
+	align-items: center;
+	justify-content: space-between;
 }
 
-header > div {
-    display: flex;
-    flex-direction: column;
+header>div {
+	display: flex;
+	flex-direction: column;
 }
 
 #t {
 	opacity: 60%;
-	font-size: 10pt;
+	font-size: 8pt;
 }
 
 #h {
-	font-size: 16pt;
+	font-size: 14pt;
 }
 
 
 #class-item {
-	margin-top: 16px;
+	margin-top: 8px;
 }
 
-#class-item > main {
+#class-item>main {
 	margin-top: 8px;
 	display: flex;
 	justify-content: space-between;
+}
+
+.swiper-container {
+	flex: 1;
+}
+.swiper-item {
+	margin: 8px;
+}
+
+#settings-button {
+	transition: all 100ms ease;
+}
+#settings-button:active {
+	opacity: 0.2;
+}
+
+#settings-screen {
+	padding: 8px
 }
